--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Hi, I am an agile human who likes to make cool things that simply life and help other humans!</p>
+      <p>Hi, I am an agile human who likes to make cool things!</p>
       <h1>Where I'm From</h1>
       <p>I'm from Annapolis, MD</p>
       <h1>What are your favorite hobbies?</h1>
       <p>I like writing algorithms, and code! I also like singing, running and cooking</p>
       <h1>What's your dream job?</h1>
-      <p>To be a full stack web developerworking in media!</p>
+      <p>To be a full stack web developer working in media!</p>
       <h1>Where do you live?</h1>
-      <p>I live in Fair Oks, VA</p>
+      <p>I live in Fair Oaks, VA with my husband and my two cats</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>because making cool stuff rules!!!</p>
     </section>
