I like to make edits and get good at these steps

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>Hi, I am an agile human who likes to make cool things! I am probably not a robot!</p>
       <h1>Where I'm From</h1>
-      <p>I'm from Annapolis, MD originally where I learned to sail and eat crabs from the bay (sadly, I'm now allergic).</p>
+      <p>I'm from Annapolis Maryland, it's nice there.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I like writing algorithms, and code! I also like singing and participating in the performing arts in general). Running and walking are my favorite forms of fitness. I also like cooking and watching TV with my boo.</p>
+      <p>I like writing algorithms, and code! I also like singing and participating in the performing arts in general. Running and walking are my favorite forms of fitness. I also like being lazy.</p>
       <h1>What's your dream job?</h1>
       <p>To be a full stack web developer working for The New York Times!</p>
       <h1>Where do you live?</h1>
-      <p>I live in Fair Oaks, VA with my husband and my two cats in a super cool townhouse. Dis gud nest!</p>
+      <p>I live in Fair Oaks Virginia now. Brad and my two cats own a super cool townhouse. Dis gud nest!</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>because making cool stuff rules!!!</p>
+      <p>Because making cool stuff is awesome!!!</p>
     </section>
 
     <footer id="footer">
