last edits for the night

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>To be a full stack web developer working for The New York Times!</p>
       <h1>Where do you live?</h1>
-      <p>I live in Fair Oaks Virginia now. Brad and my two cats own a super cool townhouse. Dis gud nest!</p>
+      <p>Brad and I are engaged, we likve with our two cats in a super cool townhouse in Fair Oaks Virginia. Our cats are too lazy to come to the top floor, but dis gud nest!</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Because making cool stuff is awesome!!!</p>
     </section>
