ok just kidding this is the last push

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <h1>Introduction</h1>
       <p>Hi, I am an agile human who likes to make cool things! I am probably not a robot!</p>
       <h1>Where I'm From</h1>
-      <p>I'm from Annapolis Maryland, it's nice there.</p>
+      <p>I'm originally from Annapolis Maryland, it's nice there.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I like writing algorithms, and code! I also like singing and participating in the performing arts in general. Running and walking are my favorite forms of fitness. I also like being lazy.</p>
+      <p>I like video games, and singing and running. I also like being lazy.</p>
       <h1>What's your dream job?</h1>
-      <p>To be a full stack web developer working for The New York Times!</p>
+      <p>I thinki'd like to be a full stack web developer working for The New York Times!</p>
       <h1>Where do you live?</h1>
-      <p>Brad and I are engaged, we likve with our two cats in a super cool townhouse in Fair Oaks Virginia. Our cats are too lazy to come to the top floor, but dis gud nest!</p>
+      <p>Brad and I are engaged, we live with our two cats in a super cool brand new townhouse in Fair Oaks Virginia. Dis gud nest!</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Because making cool stuff is awesome!!!</p>
     </section>
