--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Hi, I am an agile human who likes to make cool things! I am probably not a robot!</p>
+      <p>Hi, I am probably not a robot!</p>
       <h1>Where I'm From</h1>
-      <p>I'm originally from Annapolis Maryland, it's nice there.</p>
+      <p>Annapolis, MD</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I like video games, and singing and running. I also like being lazy.</p>
+      <p>I like singing, running, cooking, eating and being lazy</p>
       <h1>What's your dream job?</h1>
-      <p>I thinki'd like to be a full stack web developer working for The New York Times!</p>
+      <p>full stack web developer</p>
       <h1>Where do you live?</h1>
-      <p>Brad and I are engaged, we live with our two cats in a super cool brand new townhouse in Fair Oaks Virginia. Dis gud nest!</p>
+      <p>Fairfax, VA</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Because making cool stuff is awesome!!!</p>
     </section>
